# tableau-mcp-starter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
bedrock/: __init__.py  mcp_chatbot_base.py  mcp_chatbot_http.py  mcp_chatbot_stdio.py
config/: __init__.py  config.py
tests/bedrock/: __init__.py  test_chatbot.py  test_chatbot_stdio.py
