[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tableau-mcp-starter"
version = "0.1.0"
description = "Tableau MCPを使用した会話Botのテンプレート"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.55",
    "httpx>=0.28.1",
    "mcp>=1.18.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]

[tool.hatch.build.targets.wheel]
packages = ["bedrock", "config"]
